--- a/resources/templates/redis-context.xml.erb
+++ b/resources/templates/redis-context.xml.erb
@@ -19,8 +19,8 @@
 <Context allowLinking='true'>
   <Valve className="com.radiadesign.catalina.session.RedisSessionHandlerValve" />
   <Manager className="com.radiadesign.catalina.session.RedisSessionManager"
-           host="<%=service.host%>"
-           port="<%=service.port%>"
-           password="<%=service.password%>"
+           host="<%=service['credentials']['host']%>"
+           port="<%=service['credentials']['port']%>"
+           password="<%=service['credentials']['password']%>"
            maxInactiveInterval="60" />
 </Context>
